Fix add button, z-index is the cause

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ textarea:focus, input:focus{
     padding: 1em;
 
     position: relative;
-    z-index: -1;
+    z-index: 1;
 }
 
 .book hr {
@@ -68,6 +68,8 @@ textarea:focus, input:focus{
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+
+    z-index: 2;
 }
 
 .book-input {
